<resources>
    <string name="app_name">Ititit App</string>
    <string name="error_no_internet">No internet connection</string>
    <string name="consumer_registration">Consumer Registration</string>
    <string name="username">Username</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="password">Password</string>
    <string name="confirmed_password">Confirmed Password</string>
</resources>
